--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-react": "^6.0.0",
     "file-loader": "^0.9.0",
     "glob": "^7.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "isparta-instrumenter-loader": "^1.0.0",
     "karma": "^1.0.0",
     "karma-chai": "^0.1.0",
@@ -66,6 +67,9 @@
     "core-js": "^2.0.0",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react-dom": "^15.0.0",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   }
 }
