--- a/package.json
+++ b/package.json
@@ -52,12 +52,15 @@
     "karma-webpack": "^1.7.0",
     "minimist": "^1.2.0",
     "mocha": "^3.0.0",
+    "node-sass": "^4.5.2",
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.0.0",
     "react-addons-test-utils": "^15.0.0",
     "react-hot-loader": "^1.2.9",
     "rimraf": "^2.4.3",
+    "sass": "^0.5.0",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
@@ -69,6 +72,7 @@
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-redux": "^5.0.4",
+    "react-router": "^4.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   }
