--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.0.0",
+    "react-addons-css-transition-group": "^15.5.2",
     "react-addons-test-utils": "^15.0.0",
     "react-hot-loader": "^1.2.9",
     "rimraf": "^2.4.3",
@@ -73,6 +74,7 @@
     "react-dom": "^15.0.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
+    "react-swipe": "^5.0.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   }
