--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Your name here",
   "devDependencies": {
     "antd": "^2.9.1",
+    "axios": "^0.16.1",
     "babel-core": "^6.0.0",
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.0.0",
