--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^3.0.0",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^6.0.0",
+    "fetch-jsonp": "^1.0.6",
     "file-loader": "^0.9.0",
     "glob": "^7.0.0",
     "isomorphic-fetch": "^2.2.1",
@@ -77,6 +78,7 @@
     "react-router": "^3.0.0",
     "react-swipe": "^5.0.6",
     "redux": "^3.6.0",
+    "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0"
   }
 }
